<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground"
    tools:context=".ui.activities.user_registration.signin.SigninActivity">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header" />

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingEnd="30dp"
            android:paddingBottom="@dimen/activity_vertical_margin">
            <ImageView
                android:visibility="gone"
                android:id="@+id/img_product"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_logo" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_pro_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/pro_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/pro_name"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:textSize="13dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_pro_texture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/pro_texture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/pro_texture"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:textSize="13dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_pro_worth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/pro_worth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/pro_worth"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:textSize="13dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_pro_exchange_for"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/pro_exchange_for"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/pro_exchange_for"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:textSize="13dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_contact_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/contact_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/contact_no"
                    android:inputType="phone"
                    android:selectAllOnFocus="true"
                    android:textSize="13dp" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="Location"
                    android:inputType="phone"
                    android:selectAllOnFocus="true"
                    android:textSize="13dp" />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="7dp"
                android:textColor="@color/colorThemeDark"
                android:text="@string/pro_status"
                android:textSize="13dp" />

            <RadioGroup
                android:id="@+id/rg_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/rb_available"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/available"
                    android:textSize="13dp" />

                <RadioButton
                    android:id="@+id/rb_not_available"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_available"
                    android:textSize="13dp" />
            </RadioGroup>

            <!--  <TextView
                  android:background="@color/colorThemeDark"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="20dp"
                  android:textAlignment="gravity"
                  android:gravity="center_vertical"
                  android:textColor="@android:color/white"
                  android:drawableEnd="@drawable/ic_attachment"
                  android:text="@string/upload"
                  android:textSize="13dp" />-->

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/submit"
                android:textColor="@color/colorActivityBackground" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
